--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,11 +20,12 @@ h1 {
 h2 {
   font-size: 1.5rem;
   margin: 1.5rem 0;
-  color: blue;
+  color: maroon;
 }
 
 h3 {
   font-size: 1.25rem;
+  color: maroon;
 }
 
 h4 {
@@ -39,6 +40,7 @@ h5 {
 p {
   font-weight: 300;
   line-height: 1.25;
+  font-style: italic;
 }
 
 /*--Header--*/
@@ -133,5 +135,324 @@ a {
   }
   nav {
     width: 60%
+  }
+}
+
+/*--Main--*/
+
+main {
+  position: relative;
+  top: 64px;
+}
+
+
+/*--Promo Section--*/
+
+.jumbotron {
+  padding: 2rem 2rem;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+
+.banner {
+  width: 80%;
+  overflow: hidden;
+}
+
+img {
+  width: 100%;
+}
+
+.jumbotron h1{
+  color: maroon;
+}
+
+.jumbotron p{
+font-size: 1.5rem;
+}
+
+hgroup {
+  margin: 0 40px;
+  display: flex;
+  align-items: flex-start;
+  flex-flow: column wrap;
+}
+
+.button {
+  width: 50%;
+  max-height: 40px;
+  align-self: flex-start;
+  border-radius: 5px;
+  background-color: transparent;
+  border: solid 1px maroon;
+  text-decoration: none;
+  color: maroon;
+  font-size: 1rem;
+  padding: 1rem;
+  margin: 2rem 2rem 2rem 0rem;
+  text-align: center;
+  text-transform: uppercase;:
+}
+
+.button:hover {
+  background-color: blue;
+  color: white;
+  transition: .25s ease 150ms;
+}
+
+
+/*--Promo Breakpoints--*/
+
+@media only screen and (max-width:1080px) {
+  .jumbotron {
+    font-size: 1rem;
+    padding: 2rem 2rem;
+  }
+  h1 {
+    font-size: 2.25rem;
+    margin: 2rem 0 1rem 0;
+  }
+}
+
+@media only screen and (max-width:830px) {
+  .jumbotron {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 2rem 2rem;
+  }
+  .jumbotron .banner {
+    width: 100%;
+    max-height: 20rem;
+    overflow: hidden;
+  }
+  hgroup {
+    flex-flow: row wrap;
+    margin: 0;
+    width: 100%;
+  }
+  .button {
+    width: 100%;
+    margin: 2rem 0rem 2rem 0rem;
+  }
+}
+
+/*--Information Overview--*/
+
+#highlights {
+  display: flex;
+  flex-flow: row;
+  padding: 2rem;
+  background-color: #f4f4f4;
+  color: #000000;
+}
+
+.focus {
+  max-width: 60%;
+  display: flex;
+  flex-flow: column wrap;
+  padding: 0 1.5rem 0 0;
+}
+
+#highlights img, #thesis img {
+  width: 100%;
+}
+
+aside {
+  max-width: 40%;
+}
+
+aside .image {
+  width: 35%;
+}
+
+.title {
+  padding-left: 1rem;
+  max-width: 60%;
+}
+
+.title p {
+  margin: 0.75rem auto;
+}
+
+.mobile {
+  display: none;
+}
+
+.story {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  background-color: #ffffff;
+  border-top: solid 1px #d8d8d8;
+  border-left: solid 1px #d8d8d8;
+  padding: 1rem;
+}
+
+aside .story:hover {
+  opacity: .90;
+}
+
+.info a {
+  color: #blue;
+  padding-top: 3rem;
+}
+
+.info a:hover {
+  text-decoration: line-through;
+}
+
+.reference {
+  font-size: 0.75rem;
+  margin-top: 2.5rem;
+}
+
+
+/*--Overview Breakpoints--*/
+
+@media only screen and (max-width:1080px) {
+  #highlights {
+    flex-flow: column;
+    padding: 2rem 0;
+  }
+
+  .focus {
+    max-width: 100%;
+  }
+
+  .story {
+    border: solid 1px #d8d8d8;
+  }
+
+  #highlights aside {
+    width: inherit;
+    max-width: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 2rem 1.5rem 0;
+  }
+  #highlights .image {
+    padding: 0;
+    width: 100%;
+  }
+  #highlights .story {
+    display: flex;
+    flex-direction: column;
+    max-width: 30%;
+    align-items: flex-start;
+  }
+  #highlights .title {
+    max-width: none;
+    margin-top: 1rem;
+  }
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: initial;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width:800px) {
+  #highlights .focus {
+    display: none;
+  }
+  #highlights aside {
+    flex-flow: column;
+    width: auto;
+    margin-top: 0;
+  }
+  #highlights .story {
+    max-width: 100%;
+    margin: 0.5rem 0;
+  }
+}
+
+/*--Courses--*/
+
+#courses {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: auto;
+  background-color: #ffffff;
+}
+
+#courses h2, #thesis h2{
+  padding: 2rem 0 0 0;
+  width: 100%;
+  text-align: center;
+}
+
+.program {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  margin: 2rem;
+  background-color: #f4f4f4;
+}
+
+.program a {
+  color: black;
+}
+
+.program:hover {
+  border-top: solid 5px blue;
+  transition: border-top 0.15s ease-out 200ms;
+}
+
+.program img {
+  width: 100%;
+}
+
+#courses h3 {
+  margin: 1rem 0;
+}
+
+.details {
+  padding: 1rem;
+  flex: 1 1;
+}
+
+.details h4 {
+  padding: 0.5rem 0;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.details p {
+  font-weight: 400;
+  font-style: italic;
+  line-height: 1.5;
+  padding: .5rem 0 1.5rem 0;
+}
+
+
+/*--Courses Breakpoints--*/
+
+@media only screen and (max-width: 800px) {
+  .program {
+    width: 40%;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  #courses h2 {
+    margin: 0 auto 2rem;
+  }
+  #courses {
+    padding-bottom: 1rem;
+  }
+  .program {
+    width: 80%;
+    margin: 0.5rem 0;
+  }
+  .program img, .program h4, .program p {
+    display: none;
+  }
+  #courses h3 {
+    margin: 0;
   }
 }
