--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -456,3 +456,69 @@ aside .story:hover {
     margin: 0;
   }
 }
+
+/*--Thesis--*/
+
+#thesis {
+  background-color: #f4f4f4;
+  padding: 0 0 2rem 0;
+}
+
+#thesis>div {
+  display: flex;
+  padding: 1rem 1.5rem;
+}
+
+#thesis .focus {
+  padding: 0;
+}
+
+#thesis aside {
+  display: flex;
+  flex-flow: column;
+  margin-left: 1rem;
+}
+
+#thesis h3 {
+  margin: 1.5rem 0;
+}
+
+.focus video {
+  width: 100%;
+}
+
+
+/*--Thesis Breakpoints--*/
+
+@media only screen and (max-width:1080px) {
+  #thesis>div {
+    flex-flow: column;
+  }
+  #thesis .story {
+    flex-flow: row;
+    padding: 0;
+    max-height: 10.5rem;
+  }
+  #thesis aside {
+    display: flex;
+    flex-flow: row;
+    max-width: none;
+    margin: 2rem 0 0 0;
+  }
+  #thesis .image {
+    padding: 1rem;
+    max-width: 25%;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #thesis aside {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 660px) {
+  #thesis aside, #thesis h3, #thesis p {
+    display: none;
+  }
+}
